<resources>
    <string name="app_name">Festival Planer</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_discover">Discover</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="nav_developer_contact_adress" translatable="false">amgbr@gmail.com</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_settings">Settings</string>
    <string name="pref_notifications">Notifications</string>

    <string name="action_search">Search</string>
    <string name="action_add_favorite">Add as favorite</string>

    <string name="filter">Filter</string>
    <string name="festival_card_header_description">Description</string>
    <string name="festival_card_header_ticket">Tickets</string>
    <string name="festival_tab_infos">Infos</string>
    <string name="festival_tab_lineup">Line Up</string>
    <string name="festival_tab_planning">Planning</string>

    <string name="soon">Soon</string>
    <string name="more">More</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="any_distance">Any distance</string>
    <string name="sort_by">Sort by</string>
    <string name="date">Date</string>
    <string name="filter_distance">Distance</string>
    <string name="date_range">Date range</string>
    <string name="to">to</string>

    <string name="action_remove">Remove</string>
    <string name="single_item_selected">item selected</string>
    <string name="multiple_items_selected">items selected</string>

    <string name="participants">participants</string>
    <string name="added">added</string>
    <string name="action_add">Add</string>
    <string name="title_activity_contacts">Choose from contacts</string>
    <string name="festival_card_header_direction">Direction</string>
    <string name="pref_set_home_address_via_gps">Set home address via GPS</string>
    <string name="pref_home_address">Home address</string>
    <string name="pref_location">Location</string>
    <string name="pref_notification_key" translatable="false">pref_notifications</string>
    <string name="pref_home_address_key" translatable="false">pref_home_address</string>
    <string name="notifications_enabled_message">Notifications enabled</string>
    <string name="notifications_disabled_message">Notifications disabled</string>
    <string name="fcm_topic_main" translatable="false">news</string>
    <string name="search_hint">Search for festival name…</string>
    <string name="filter_no_location_given">Set home address in settings to use distance filter</string>
    <string name="direction_distance_label">Distance:</string>
    <string name="new_participants">New participant</string>

</resources>
