<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_action_home"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_action_favorite_gray"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_action_map_gray"
            android:title="@string/nav_discover" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>

</menu>