<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_action_favorite_gray"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_action_map_gray"
            android:title="@string/nav_discover" />

    </group>

    <item android:title="@string/nav_settings">
        <menu>
            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_action_notifications_active_gray"
                android:title="@string/nav_notifications"
                app:actionLayout="@layout/nav_switch"/>
        </menu>
    </item>

</menu>
